implement basic login in UI

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
 
     <main>
       <h1 class="text-center">Pet Daycare</h1>
+      <div class="text-center">This is the homepage</div>
     </main>
 
     <%- include('partials/footer.ejs') %>
