--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,11 +3,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Foo Website</title>
+  <title>Pet Daycare</title>
   
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css" />
-  
-  <style>
-    
-  </style>
+  <link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
