--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="text-center mt-3">
+<footer>
   &copy; 2020 Pet Daycare. All rights reserved <br />
   Disclaimer: The information in this page might be innacurate.
 </footer>
