--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,17 +1,19 @@
-<nav class="navbar navbar-dark bg-dark navbar-expand-sm mb-3">
+<nav class="navbar navbar-dark bg-primary navbar-expand-sm mb-3">
   <a class="navbar-brand" href="/">Pet Daycare</a>
   
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/venus">Schedule Service</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/earth">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/mercury">My Profile</a>
-        </li>
-      </ul>
-    </div>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item">
+      <a class="nav-link" href="/service/new">Schedule Service</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/services">Services</a>
+    </li>
+  </ul>
+  
+  <% if (authenticated) { %>
+      <a class="btn btn-outline-light mr-3" href=<%= `/customer/${customerId}` %>>My Profile</a>
+      <a class="btn btn-outline-light" href="/logout">Logout</a>
+    <% } else { %>
+      <a class="btn btn-info" href="/login">Login</a>
+    <% } %>
 </nav>
