setup files, clean org, active nav items

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pet Daycare</title>
   
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="/js/main.js"></script>
+  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css" />
-  <link rel="stylesheet" href="css/styles.css" type="text/css" />
+  <link rel="stylesheet" href="/css/styles.css" type="text/css" />
 </head>
