--- a/views/scheduleService.ejs
+++ b/views/scheduleService.ejs
@@ -7,15 +7,15 @@
       <h1 class="text-center">Schedule New Service</h1>
       <div class="text-center">Avalible Serices: </div>
       <%services.forEach(function(service){ %>
-        <div><%=service.name%>: </div>
-        <div><%=service.description%></div>
-        <div>Cost: $<%=service.cost%></div>
-        <br><br>
+        <div class="text-center"><%=service.name%>: </div>
+        <div class="text-center"><%=service.description%></div>
+        <div class="text-center">Cost: $<%=service.cost%></div>
+        <br>
       <% }); %>
     </main>
     
 
-    <form id="serviceSchedule">
+    <form id="serviceSchedule" class="text-center border">
       <!-- Select Pet Dropdown -->
       <label for="petId">Choose a pet:</label>
       <select id="petId" name="petId">
