--- a/views/scheduleService.ejs
+++ b/views/scheduleService.ejs
@@ -45,7 +45,7 @@
       <button id="submit">Submit</button>
       
     </form>
-    
+    <span id="scheduleSuccess" class="text-success"></span>
     <%- include('partials/footer.ejs') %>
     <script src="/js/scheduleService.js"></script>
   </body>
