--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,6 +12,11 @@ body {
   margin: 0 auto;
 }
 
+#shrinkSmall{
+  width: 275px;
+  height: 275px;
+}
+
 footer {
   margin-top: 1rem;
   width: 100%;
@@ -20,4 +25,9 @@ footer {
   text-align: center;
   background-color: #f9f9f9;
   border-top: .05rem solid #e5e5e5;
+}
+
+.jumbotron{
+  background-image: url("/img/dogBanner.jpg");
+  background-size: cover;
 }
